--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -31,7 +31,10 @@ proxy-groups:
   - {name: 网易云音乐, type: select, proxies: [手动切换, DIRECT, 自动选择, 香港节点, 日本节点, 台湾节点, 美国节点, 狮城节点], icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png }  
   - {name: GitHub, type: select, proxies: [手动切换, DIRECT, 自动选择, 香港节点, 日本节点, 台湾节点, 美国节点, 狮城节点], icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png }  
   - {name: Gemini, type: select, proxies: [手动切换, DIRECT, 自动选择, 香港节点, 日本节点, 台湾节点, 美国节点, 狮城节点], icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Google.png }  
+  - {name: Claude, type: select, proxies: [手动切换, DIRECT, 自动选择, 香港节点, 日本节点, 台湾节点, 美国节点, 狮城节点], icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png }  
+  - {name: Cursor, type: select, proxies: [手动切换, DIRECT, 自动选择, 香港节点, 日本节点, 台湾节点, 美国节点, 狮城节点], icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png }  
   - {name: TongDun, type: select, proxies: [手动切换, DIRECT, 自动选择, 香港节点, 日本节点, 台湾节点, 美国节点, 狮城节点], icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png }  
+  - {name: Trae, type: select, proxies: [手动切换, DIRECT, 自动选择, 香港节点, 日本节点, 台湾节点, 美国节点, 狮城节点], icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png }  
 #节点分组
   - {name: 自动选择, type: url-test, include-all: true, interval: 600, tolerance: 50,  icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Urltest.png }
   - {name: 香港节点, type: url-test, include-all: true, interval: 600, tolerance: 50,  filter: "港|HK|(?i)Hong", icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png }             
@@ -64,6 +67,9 @@ rule-providers:
   TongDun:    {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/BobsJohn/Profile/refs/heads/master/tongdun.yaml ,path: ./ruleset/TongDun.yaml        }
   GitHub:      {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml ,                      path: ./ruleset/Github.yaml       }
   Gemini:      {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml ,                      path: ./ruleset/Gemini.yaml       }
+  Claude:      {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml ,                      path: ./ruleset/Claude.yaml       }
+  Cursor:      {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/BobsJohn/Profile/refs/heads/master/cursor.yaml ,path: ./ruleset/Cursor.yaml        }
+  Trae:        {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/BobsJohn/Profile/refs/heads/master/trae.yaml ,path: ./ruleset/Trae.yaml        }
 # 分流Policy 
 rules:
   - RULE-SET,AdBlock,AdBlock
@@ -88,5 +94,8 @@ rules:
   - RULE-SET,Download,DIRECT
   - RULE-SET,GitHub,GitHub
   - RULE-SET,Gemini,Gemini
+  - RULE-SET,Claude,Claude
+  - RULE-SET,Cursor,Cursor
+  - RULE-SET,Trae,Trae
   - GEOIP,CN,DIRECT
   - MATCH,兜底分流
