--- a/tongdun.yaml
+++ b/tongdun.yaml
@@ -5,3 +5,5 @@ payload:
   - DOMAIN-SUFFIX,tongdun.me
   - DOMAIN-SUFFIX,tongdun.cn
   - IP-CIDR,10.57.240.1/32
+  - IP-CIDR,198.18.0.1/32
+  - IP-CIDR,198.18.0.0/15
